Fix button spacing

--- a/pianobar_webui/src/features/ui/widgets/PlayerController/styles.module.css
+++ b/pianobar_webui/src/features/ui/widgets/PlayerController/styles.module.css
@@ -1,3 +1,3 @@
-.buttonList > * {
-    margin: 10px;
+.buttonList > div {
+    margin: 0 10px 0 10px;
 }
